--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 name = "doh"
 workers_dev = true
-# route = "example.com/dns-query"
+route = "cloudflare-dns.com/dns-query"
 compatibility_date = "2024-01-26"
 
 main = "index.js"
