--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "doh"
 workers_dev = true
-route = "cloudflare-dns.com/dns-query"
+# route = "cloudflare-dns.com/dns-query"
+# Deleted this line for the error...
 compatibility_date = "2024-01-26"
 
 main = "index.js"
