--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,18 @@
-name = "doh"
+name = "doh-check"
+type = "javascript"
+
+account_id = "$CF_ACCOUNT_ID"
 workers_dev = true
-# route = "cloudflare-dns.com/dns-query"
-# Deleted this line for the error...
-compatibility_date = "2024-01-26"
 
-main = "index.js"
+# 指定构建输出目录
+[build]
+command = "npm run build"
+directory = "./build"
 
-[placement]
-mode = "smart"
+# 指定 Pages 构建输出目录
+[site]
+bucket = "./build"
+entry-point = "."
+
+# 其他可选配置
+# vars = { ENV_VAR_NAME = "value" }
